# TNL-LBM

./: .clangd  .editorconfig  .gitignore  .gitlab-ci.yml  AGENTS.md  CMakeLists.txt  README.md  adios2-inline-plugin.xml  adios2.xml  adios2_sst.xml  pyproject.toml
Documentation/: CMakeLists.txt  Doxyfile.in
Documentation/UsersGuide/: CMakeLists.txt  users-guide.md
Documentation/UsersGuide/CollisionOperators/: CMakeLists.txt  lid_driven_cavity_clbm.cu  lid_driven_cavity_mrt.cu  ug_CollisionOperators.md
Documentation/UsersGuide/GettingStarted/: CMakeLists.txt  ug_GettingStarted.md
Documentation/UsersGuide/LidDrivenCavity/: CMakeLists.txt  lid_driven_cavity_srt.cu  ug_LidDrivenCavity.md
Documentation/UsersGuide/MultiGPU/: CMakeLists.txt  lid_driven_cavity_multi_gpu.cu  ug_MultiGPU.md
Documentation/UsersGuide/StreamingSchemes/: CMakeLists.txt  lid_driven_cavity_aa.cu  ug_StreamingSchemes.md
Documentation/UsersGuide/common/: lbm_doc_common.h
catalyst/: README.md  tnl_lbm_common.py  tnl_lbm_export_frames.py
catalyst/plugin/: README.md  adios2-inline-plugin.xml  lbm-pipeline.py  setting.sh
docs/: analytical_solutions_nonnewtonian.md
include/lbm3d/: AGENTS.md  DataManager.h  DataWriter.h  UniformDataWriter.h  UniformDataWriter.hpp  UnstructuredPointsWriter.h  UnstructuredPointsWriter.hpp  adios_writer.h  adios_writer.hpp  checkpoint.h  core.h  defs.h  kernels.h  lagrange_3D.hpp  lattice.h  lbm.h  lbm.hpp  lbm_block.h  lbm_block.hpp  lbm_data.h  nonNewtonian.h  obstacles_ibm.h  pibm.h  py_UniformDataWriter.h  py_bc.h  py_lattice.h  py_lbm.h  py_lbm_block.h  py_lbm_data.h  py_macro.h  py_mpi.h  py_state.h  py_typedef.h  state.h  state.hpp  state_NSE_ADE.h
include/lbm3d/d2q9/: bc.h  col_clbm.h  col_srt.h  common.h  macro.h  streaming_AB.h
include/lbm3d/d3q27/: AGENTS.md  bc.h  col_bgk.h  col_bgk_well.h  col_clbm.h  col_clbm_well.h  col_cum.h  col_cum_well.h  col_general_srt.h  col_srt.h  col_srt_adjoint.h  col_srt_modif_force.h  col_srt_well.h  common.h  common_adjoint.h  common_general.h  defs.h  eq.h  eq_adjoint.h  eq_general_entropic.h  eq_inv_cum.h  macro.h  streaming_AA.h  streaming_AB.h
include/lbm3d/d3q343/: bc.h  col_elbm.h  col_srt.h  common.h  common_general.h  defs.h  eq.h  macro.h  readme.md  streaming_AB.h
include/lbm3d/d3q53/: bc.h  col_elbm.h  col_srt.h  common.h  defs.h  eq.h  macro.h  streaming_AB.h  streaming_AB_third_array.h
include/lbm3d/d3q7/: bc.h  common.h  macro.h  streaming_AA.h  streaming_AB.h
include/lbm_common/: fileutils.h
pytnl_lbm/: CMakeLists.txt  pytnl_lbm.cpp  typedefs.h
sim_2D/: CMakeLists.txt  sim2d_1.cu
sim_NSE/: CMakeLists.txt  sim_1.cu  sim_1.py  sim_2.cu  sim_3.cu  sim_4.cu  sim_4_plot_kinetic_energy.py  sim_IBM1.cu  sim_IBM2.cu  sim_IBM3.cu  sim_IBM4.cu  sim_IBM4_2.cu  sim_IBM5.cu  sim_bump_NASA.cu  sim_nonnewtonian_poiseuille.cu  sim_nonnewtonian_poiseuille_AA.cu  sim_nonnewtonian_poiseuille_CY.cu  sim_nonnewtonian_poiseuille_Casson.cu  sim_poiseuille.cu  sim_schafer_turek.cu
sim_NSE_ADE/: CMakeLists.txt  sim_T1.cu  sim_T2.cu
sim_adjoint/: CMakeLists.txt  saveload.h  sim_adjoint.cu  sim_pseudomeasure.cu  velocity_profiles.h
tests/: CMakeLists.txt  adios2-inline-plugin.xml  compare-outputdata.sh  lbm-pipeline-test.py  test_outputdata.cu  validate-outputdata.py
tests/elbm/: elbm-D3Q53.cpp
